# sandbox

./: README.md
app/ory-kratos/: README.md  docker-compose.yml
app/skaffold-kustomize/: README.md
app/skaffold-ory-kratos/: .tool-versions  skaffold.yaml
app/skaffold-ory-kratos/config/: kratos.yaml
app/skaffold-postgres/: README.md  skaffold.yaml
app/skaffold-rust-dev-prod/: Dockerfile  skaffold.yaml
app/skaffold-rust-dev-prod-multi/: Cargo.toml  Dockerfile  README.md  skaffold.yaml
appium/appium-simple/: .envrc  .gitignore  README.md
appium/appium-simple/rest/: android.http  chromium.http  http-client.env.json  ios.http  mac.http
bazel/bazel-genrule/: .tool-versions  BUILD  MODULE.bazel  README.md
bazel/bazel-rust/: .gitignore  .tool-versions  BUILD  Cargo.toml  MODULE.bazel  README.md
bazel/bazel-rust/app/: BUILD  Cargo.toml
bazel/bazel-rust/core/: BUILD
bazel/bazel-starlark/: .gitignore  .tool-versions  BUILD  README.md  starlark.bzl
docker/docker-base/: Makefile  README.md
docker/docker-diesel-cli/: Dockerfile  Makefile  README.md
docker/docker-nginx-sample/: Makefile  README.md
docker/docker-nginx-sample/www/: index.html
docker/docker-srttotext/: Dockerfile  Makefile  README.md
kubernetes/kubernetes-istio/: .tool-versions  README.md  skaffold.yaml
kubernetes/kubernetes-secret-file/: .tool-versions  Dockerfile  README.md  skaffold.yaml
maestro/maestro-simple/: .tool-versions  README.md
maestro/maestro-simple/maestro/: android.yaml  ios.yaml  web.yaml
python/python-celery/: .envrc  README.md  pyproject.toml  request_multiple.py  request_notify.py  request_random_reject.py  request_simple.py
python/python-celery/src/: schedules.py  tasks.py
python/python-taskiq/: .tool-versions  README.md  pyproject.toml  request_multiple.py  request_simple.py
python/python-taskiq/src/: broker.py
rust/rust-appium/: Cargo.toml  Dioxus.toml  README.md
rust/rust-appium/src/: main.rs
rust/rust-appium/tests/: ui_test.rs
rust/rust-appium/tests/utils/: chromium.rs
rust/rust-axum/: Cargo.toml  README.md
rust/rust-axum/examples/: custom-validation.rs  stream.rs  utoipa-axum.rs  utoipa.rs
rust/rust-axum/http/: http-client.env.json
rust/rust-clap/: Cargo.toml  README.md
rust/rust-clap/examples/: file.rs
rust/rust-diesel-async/: Cargo.toml  README.md  db-migrate.dockerfile  diesel.toml  docker-compose.yml
rust/rust-diesel-async/examples/: basic.rs  with-default.rs
rust/rust-diesel-async/migrations/00000000_initial_state/: up.sql
rust/rust-diesel-async/migrations/2026-06-29-125053-0000_add_default_columns/: down.sql  up.sql
rust/rust-diesel-async/src/: lib.rs  main.rs
rust/rust-dioxus/: .gitignore  .tool-versions  Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
rust/rust-dioxus/assets/: sharedworker.js  sqlite.js  worker.js
rust/rust-dioxus/examples/: layout.rs  state.rs  use_action.rs  wasm_sqlite.rs  web_worker.rs
rust/rust-dioxus/src/page/: mod.rs
rust/rust-electric/: Cargo.toml  README.md  docker-compose.yml
rust/rust-electric/src/: db.rs  electric.rs  main.rs
rust/rust-electric/src/component/: add.rs  delete.rs  update.rs
rust/rust-electric/src/control/: input.rs  popup.rs
rust/rust-jsonwebtoken/: Cargo.toml  README.md
rust/rust-jsonwebtoken/src/: const.rs  decoder.rs  entity.rs  main.rs
rust/rust-kratos/: Cargo.toml  README.md  docker-compose.yml
rust/rust-kratos-web/: Cargo.toml  README.md  docker-compose.yaml
rust/rust-kratos-web/docker/config/: backend.jsonnet  backend.jwk.json  kratos.yaml
rust/rust-kratos-web/src/: config.rs  main.rs
rust/rust-kratos-web/src/actions/kratos/: login.rs  logout.rs  mod.rs  register.rs  session.rs  verify.rs
rust/rust-kratos/docker/config/: kratos.yaml
rust/rust-kratos/src/: main.rs
rust/rust-leptos-arctrigger/: Cargo.toml  README.md
rust/rust-leptos-arctrigger/src/: main.rs
rust/rust-leptos-error-handling/: Cargo.toml  README.md
rust/rust-leptos-error-handling/src/: components.rs  errors.rs  main.rs
rust/rust-macro/: Cargo.toml  README.md
rust/rust-notify/: Cargo.toml  Dockerfile  README.md
rust/rust-nvim-oxi/: Cargo.toml  README.md
rust/rust-simd/: Cargo.toml  README.md
rust/rust-strum/: Cargo.toml  README.md
rust/rust-tarpc/: Cargo.toml  README.md
rust/rust-tokio/: Cargo.toml  README.md
rust/rust-tokio-postgres/: Cargo.toml  README.md  docker-compose.yml
rust/rust-tonic/: Cargo.toml  README.md  build.rs
rust/rust-tracing/: Cargo.toml  README.md
rust/rust-tracing-leptos-log/: Cargo.toml  README.md  index.html
rust/rust-tracing-opentelemetry/: Cargo.toml  README.md  docker-compose.yaml
rust/rust-tracing-opentelemetry/grafana-alloy/: config.alloy
rust/rust-tracing-opentelemetry/src/: main.rs  otel.rs
rust/rust-wasm/: Cargo.toml  README.md
rust/rust-wasm/app/sqlite/: Cargo.toml  index.html  worker.js
rust/rust-wasm/app/sqlite/src/: lib.rs
template/compose-electric/: docker-compose.yml
template/compose-grafana/: README.md  docker-compose.yaml
template/compose-minio/: README.md  docker-compose.yaml  entrypoint.sh
template/compose-postgres/: README.md  docker-compose.yml
template/rabbitmq/: docker-compose.yaml
template/rust-leptos/: Cargo.toml  README.md  index.html
template/skaffold-kustomize/: Dockerfile  skaffold.yaml
template/skaffold-ory-kratos/: Dockerfile  README.md
template/skaffold-postgres/: Dockerfile  README.md  skaffold.yaml
template/skaffold-rust-dev-prod/: .tool-versions  Cargo.toml  README.md
template/skaffold-rust-dev-prod-multi/: Dockerfile
terraform/terraform-digital-ocean-base/: README.md  do_project.tf  do_vpc.tf  main.tf  output.tf
terraform/terraform-digital-ocean-bootstrap/: .gitignore  README.md
terraform/terraform-digital-ocean-kubernetes-gateway-api/: .tool-versions  README.md  base.tfvars  do_certificate.tf  do_kubernetes.tf  do_load_balancer.tf  do_project.tf  output.tf  variable.tf
tool/diesel-cli/: README.md  docker-compose.yaml
tool/schemespy/: .env.example.pg  README.md  docker-compose.yaml
tool/send-email/: Cargo.toml  README.md
(+134 files in other folders)
