[tool.poetry]
name = "python-taskiq"
version = "0.1.0"
description = ""
authors = ["ChunLeng Lim <chunleng.lim@woven-planet.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskiq = "^0.11.7"
taskiq-aio-pika = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.385"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
