[package]
name = "rust-dioxus"
version = "0.1.0"
authors = ["Lim Chun Leng <limchunleng@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.10", features = ["sqlite"] }
dioxus = { version = "0.6.0", features = ["router"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Worker", "MessageEvent", "SharedWorker", "MessagePort", "WorkerOptions", "WorkerType"] }
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["rt", "sync"] }

[target.'cfg(target_family = "wasm")'.dependencies]
async-std = { version = "1.13.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] } # This is needed as Android does not have a native C sqlite library
jni = "0.21.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[lib]
crate-type = ["cdylib", "rlib"]
