[package]
name = "rust-electric"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
diesel = { version = "2.2.7", features = ["postgres"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.139"
