[package]
name = "rust-kratos-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
custom_error = "1.9.2"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
# crate version seems to be outdated, so we use directly from git
# TODO Using fork because of autogenerator issue: https://github.com/ory/sdk/issues/381
ory-client = { git = "https://github.com/gogetgoing/client-rust", branch = "master" }
