[package]
name = "rust-tracing-opentelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = { version = "0.25.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.25.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "trace"] }
opentelemetry-semantic-conventions = "0.25.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = "0.3.19"
