[package]
name = "wasm-sqlite"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diesel = { version = "2.2.10", features = ["sqlite"] }
sqlite-wasm-rs = { version = "0.3.4", default-features = false, features = ["precompiled"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "MessageEvent", "Window", "Worker", "WorkerOptions", "WorkerType", "console"] }
